# quadlink

./: .dockerignore  .gitignore  CLAUDE.md  LICENSE  README.md  config.yaml.example  flake.nix  pyproject.toml
docker/: Dockerfile  docker-compose.yml
nix/: module.nix  package.nix
src/quadlink/: __init__.py  __main__.py  daemon.py  health.py  quad.py  quadstream.py  types.py
src/quadlink/config/: loader.py  models.py
src/quadlink/stream/: fetcher.py  filters.py  processor.py
tests/: test_daemon.py  test_health.py  test_main.py  test_quad.py  test_quadstream.py  test_types.py
tests/test_config/: test_loader.py  test_models.py
tests/test_stream/: test_fetcher.py  test_filters.py  test_processor.py
